feat(expoAdmin): 예약 수동 체크인·취소 API 추가 및 환불 승인 시 실제 환불 연동
- CheckinService 로 QR 스캔·수동 체크인의 입장 규칙 통합
  CheckInLog 를 ticketId 만으로 저장해 @MapsId 병합이 실패하던 체크인 500 수정
- PATCH /api/admin/expos/{expoId}/reservations/{id}/checkin
- POST  /api/admin/expos/{expoId}/reservations/{id}/cancel (전액 환불 + 환불 이력)
- 환불 승인 시 PaymentService.refund 호출(PG 취소·예약 취소·정원 복구),
  승인 사유 null 로 인한 DB 오류, 담당 관리자 권한 확인 누락, 중복 처리 방지
- 환불 목록을 Page 로 응답해 페이지 이동 지원
- 결제 내역 예약번호 부분 검색, 종료일 당일 결제가 빠지던 날짜 비교 수정
- 콘텐츠 조회가 박람회 id 대신 관리자 id 로 조회하던 버그 수정 + 담당자 확인
- 부스 승인 시 사유 필수 검증 해제 (반려일 때만 필수)
- PortOne 취소 실패를 R011 로 변환, 데모 결제(seed_)는 PG 호출 생략

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01VUs13AaoG2MTDoJVkzq94i